--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "lint": "next lint",
     "start": "next start",
     "setup": "npm install --legacy-peer-deps && echo 'Setup complete! Run npm run dev to start the development server.'",
-    "clean": "rm -rf .next node_modules && npm install --legacy-peer-deps"
+    "clean": "rm -rf .next node_modules && npm install --legacy-peer-deps",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@ai-sdk/openai": "latest",
